[package]
name = "cadence"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-rustls", "postgres"] }
tokio = { version = "1.52.3", features = ["full"] }
